# MatrixLibs

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cmake_clean.sh  makePlots.gpl  matrix.hpp  matrix_algorithm.hpp  matrix_basic_math.hpp
bench/: CMakeLists.txt  bench.cpp
bench/cache/: CMakeLists.txt  cache.cpp  cache.hpp
bench/det/: CMakeLists.txt  det.cpp  det.hpp
bench/inc/: setRand.hpp
bench/inv/: CMakeLists.txt  inv.cpp  inv.hpp
bench/multiply/: CMakeLists.txt  multiply.cpp  multiply.hpp
inc/: matrix_algorithm.hpp  matrix_basic.hpp  matrix_concatenate.hpp  matrix_filters.hpp  matrix_histogram.hpp  matrix_type.hpp
matrix/: matrix.hpp  matrix_abs.hpp  matrix_cholesky.hpp  matrix_concatenate.hpp  matrix_conv2.hpp  matrix_cooccurrence.hpp  matrix_det.hpp  matrix_div.hpp  matrix_eye.hpp  matrix_fill.hpp  matrix_filters.hpp  matrix_histogram.hpp  matrix_inv.hpp  matrix_lu.hpp  matrix_mean.hpp  matrix_median.hpp  matrix_mult.hpp  matrix_ones.hpp  matrix_pow.hpp  matrix_print.hpp  matrix_stddev.hpp  matrix_strassen.hpp  matrix_sub.hpp  matrix_sum.hpp  matrix_swap.hpp  matrix_trans.hpp  matrix_type.hpp  matrix_utils.hpp  matrix_var.hpp  matrix_zeros.hpp
plots/: fill_matrices_col_major.txt  fill_matrices_row_major.txt  multiply_square.txt
tests/: correctTests.cpp  performanceTests.cpp
tst/: CMakeLists.txt
tst/cholesky/: CMakeLists.txt  cholesky.cpp
tst/compare/: CMakeLists.txt  compare.cpp
tst/concatenate/: CMakeLists.txt  concatenate.cpp
tst/conv/: CMakeLists.txt  conv.cpp
tst/cooccurrence/: CMakeLists.txt  cooccurence.cpp
tst/correct_test/: CMakeLists.txt  correctTests.cpp
tst/det/: CMakeLists.txt  det.cpp
tst/equal/: CMakeLists.txt  equal.cpp
tst/eye/: CMakeLists.txt  eye.cpp
tst/fill/: CMakeLists.txt  fill.cpp
tst/filters/: CMakeLists.txt  filters.cpp
tst/getminor/: CMakeLists.txt  getminor.cpp
tst/histogram/: CMakeLists.txt  histogram.cpp
tst/identity/: CMakeLists.txt  identity.cpp
tst/inv/: CMakeLists.txt  inv.cpp
tst/lu/: CMakeLists.txt  lu.cpp
tst/mult/: CMakeLists.txt  mult.cpp
tst/ones/: CMakeLists.txt  ones.cpp
tst/pow/: CMakeLists.txt  pow.cpp
tst/sub/: CMakeLists.txt  sub.cpp
tst/sum/: CMakeLists.txt  sum.cpp
tst/swap/: CMakeLists.txt  swap.cpp
tst/trans/: CMakeLists.txt  trans.cpp
tst/zeros/: CMakeLists.txt  zeros.cpp
