#foreach(subdir ${SUBDIRS})
#  add_subdirectory(${subdir})
#endforeach()
#TODO: add all folders automatically

#add_subdirectory( det )  
#add_subdirectory( zeros )
#add_subdirectory( getminor )  
#add_subdirectory( inv )
#add_subdirectory( mult )
#add_subdirectory( sum)
#add_subdirectory( correct_test ) 
#add_subdirectory( equal )
#add_subdirectory( filters )
#add_subdirectory( histogram )
#add_subdirectory( lu )
#add_subdirectory( sub )
#add_subdirectory( trans )

add_subdirectory( compare )
add_subdirectory( concatenate )
add_subdirectory( conv )
add_subdirectory( det )
add_subdirectory( equal )
add_subdirectory( eye )
add_subdirectory( fill )
add_subdirectory( filters )
add_subdirectory( getminor )
add_subdirectory( histogram )
add_subdirectory( identity )
add_subdirectory( inv )
add_subdirectory( lu )
add_subdirectory( mult )
add_subdirectory( ones )
add_subdirectory( pow )
add_subdirectory( sub )
add_subdirectory( sum )
add_subdirectory( trans )
add_subdirectory( zeros )